feat:sistemato questione titolo evento